# multi_robot_project

./: README.md  package.xml  setup.py
launch/: multi_robot.launch.py
scripts/: cnn_controller.py  collision_avoidance.py  connectivity_monitor.py  consensus_node.py  coverage_controller.py  dataset_recorder.py  formation_controller.py  lidar_processor.py  mission_manager.py  topology_manager.py  train_cnn_controller.py
